commited change on the Header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     
  
-     <h2> NEW YEARS EVE </h2>
+     <h2> YOUR BIRTHDAY REMAINS</h2>
 
      <div class="countdown-container">
         <div class="countdown-el days-c">
